# rss-shim

./: .dockerignore  .editorconfig  .flake8  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .shellcheckrc  .yamllint.yaml  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements-lock.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: checks.yaml
src/rss_shim/: __init__.py  __main__.py  config.py  feed_gen.py  paths.py  utils.py
src/rss_shim/shims/: __init__.py  astral.py  base_shim.py  comics_kingdom.py
