[metadata]
name = rss-shim
version = 0.0.1
description = A package to create RSS feeds for sites that do not support them.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aphedges/rss-shim
author = Alex Hedges
license = CC0-1.0
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: System Administrators
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Communications
    Topic :: Internet
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
    Typing :: Typed

[options]
install_requires =
    requests>=2.26.0  # Use charset_normalizer to avoid license issues
python_requires = >=3.8

[options.entry_points]
console_scripts =
    rss-shim = rss_shim.__main__:main

[options.extras_require]
dev =
    mypy==1.7.0
    pre-commit==3.5.0
    pylint==3.0.2
    types-requests==2.31.0.10

[options.package_data]
sdf = py.typed
